fixed up the spacing a bit on the new wide songs - parsed the css - working on styling the songs today

--- a/ahoyApp/www/css/section-songs.css
+++ b/ahoyApp/www/css/section-songs.css
@@ -3,6 +3,8 @@
   top: 0;
   /* Adjust this value to change the point at which the element becomes sticky */
   z-index: 10;
+  max-width:300px;
+  margin-left:20px;
   /* Adjust this value to ensure the element is above other elements */
 }
 
@@ -44,4 +46,46 @@
 .song-row:first-child,
 .song-row:last-child {
   border: none;
+}
+
+.song-row.clicked {
+  animation: highlight 1s ease-in-out;
+  background-color: yellow;
+}
+
+@keyframes highlight {
+  0% { background-color: white; }
+  50% { background-color: yellow; }
+  100% { background-color: white; }
+}
+
+#song-col-wrap {
+  display: flex;
+}
+
+#song-col-wrap {
+display: flex;
+flex-wrap: wrap;
+}
+
+#song-col-1, #song-col-2 {
+flex: 1 0 320px;
+box-sizing: border-box;
+}
+
+#song-col-2 {
+position: relative; /* This is the parent element of #song-Featured-Art */
+overflow: auto; /* This allows the content to scroll */
+}
+
+#song-Featured-Art {
+top: 0; /* This makes the element stick to the top of the parent */
+width: 100%;
+height: 0;
+padding-bottom: 100%;
+background-position: center;
+background-repeat: no-repeat;
+background-size: cover;
+overflow: hidden;
+background-color: black;
 }
